# heatingsimulator

./: .pre-commit-config.yaml  README.org  heatingsimulator.py  pyproject.toml  sample_heating.toml  vitocal-251.a04.toml
